Fix case/in parsing of standalone "in" pattern matching

Fixes [Bug #21925]